Resolve "Provide the class of a resource with a DOI in the widget response"